[gd_scene load_steps=2 format=3 uid="uid://ncdkbppjyki5"]

[ext_resource type="Script" uid="uid://bjfds0o46wawt" path="res://ui/menus/tabs/VideoTab.gd" id="1_2ys8k"]

[node name="VideoTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ys8k")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Pantalla"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ResolutionRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Resolution" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/ResolutionRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resolucion"

[node name="ResolutionOption" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/ResolutionRow"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 5

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="WindowModeRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="WindowMode" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/WindowModeRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Modo Pantalla"

[node name="OptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/WindowModeRow"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 5

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VsyncRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Vsync" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VsyncRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Sincronizacion Vertical"

[node name="CheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VsyncRow"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 5

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CountdownLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResolutionConfirm" type="ConfirmationDialog" parent="."]
